--- a/tensorflow/ubuntu-18.10/docker-compose.yml
+++ b/tensorflow/ubuntu-18.10/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - ../../wheels:/wheels
     environment:
-      - TF_VERSION_GIT_TAG=${TF_VERSION_GIT_TAG:?TF_VERSION_GIT_TAG}
-      - PYTHON_VERSION=${PYTHON_VERSION:?PYTHON_VERSION}
-      - BAZEL_VERSION=${BAZEL_VERSION:?BAZEL_VERSION}
+      - TF_VERSION_GIT_TAG=${TF_VERSION_GIT_TAG-v1.15.5}
+      - PYTHON_VERSION=${PYTHON_VERSION-3.7}
+      - BAZEL_VERSION=${BAZEL_VERSION-0.26.1}
       - USE_GPU=${USE_GPU-0}
       - CUDA_VERSION=${CUDA_VERSION-10.0}
       - CUDNN_VERSION=${CUDNN_VERSION-7.5}
