--- a/tensorflow/ubuntu-18.10/docker-compose.yml
+++ b/tensorflow/ubuntu-18.10/docker-compose.yml
@@ -14,3 +14,4 @@ services:
       - CUDA_VERSION=${CUDA_VERSION:-10.0}
       - CUDNN_VERSION=${CUDNN_VERSION:-7.5}
       - NCCL_VERSION=${NCCL_VERSION:-2.4}
+      - GCC_CPU_ARCH=${GCC_CPU_ARCH:-core2}
